--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    
+    // https://mvnrepository.com/artifact/org.processing/core
+    compile group: 'org.processing', name: 'core', version: '3.3.7'
 }
 
 compileKotlin {
